@@ -55,10 +55,7 @@ processing instead of returning. See fetch() for an example.
 sub throw_error {
     my $self = shift;
     my $msg = shift || 'unknown error';
-    if ( $ENV{CXCRUD_TEST} ) {
-        Carp::cluck();
-    }
-    Catalyst::Exception->throw($msg);
+    Carp::confess($msg);
 }
 
 =head1 AUTHOR
