@@ -2,9 +2,8 @@ package CatalystX::CRUD::REST;
 use strict;
 use warnings;
 use base qw( CatalystX::CRUD::Controller );
-
 use Carp;
-use Data::Dump qw( dump );
+use Class::C3;
 
 our $VERSION = '0.26';
 
@@ -73,12 +72,24 @@ Acts just like create() in base Controller class, but with a RESTful name.
 
 sub create_form : Local {
     my ( $self, $c ) = @_;
-    return $self->create($c);
+    $self->fetch( $c, 0 );
+    $self->edit($c);
 }
 
 sub edit_form : PathPart Chained('fetch') Args(0) {
     my ( $self, $c ) = @_;
     return $self->edit($c);
+}
+
+=head2 create
+
+Redirects to create_form().
+
+=cut
+
+sub create : Local {
+    my ( $self, $c ) = @_;
+    $c->res->redirect( $c->uri_for('create_form') );
 }
 
 =head2 default
@@ -162,8 +173,7 @@ Overrides base method to disable chaining.
 
 sub edit {
     my ( $self, $c ) = @_;
-    Data::Dump::dump $c->stash;
-    return $self->NEXT::edit($c);
+    return $self->next::method($c);
 }
 
 =head2 view( I<context> )
@@ -174,7 +184,7 @@ Overrides base method to disable chaining.
 
 sub view {
     my ( $self, $c ) = @_;
-    return $self->NEXT::view($c);
+    return $self->next::method($c);
 }
 
 =head2 save( I<context> )
@@ -185,7 +195,7 @@ Overrides base method to disable chaining.
 
 sub save {
     my ( $self, $c ) = @_;
-    return $self->NEXT::save($c);
+    return $self->next::method($c);
 }
 
 =head2 rm( I<context> )
@@ -196,7 +206,27 @@ Overrides base method to disable chaining.
 
 sub rm {
     my ( $self, $c ) = @_;
-    return $self->NEXT::rm($c);
+    return $self->next::method($c);
+}
+
+=head2 postcommit( I<context>, I<object> )
+
+Overrides base method to redirect to REST-style URL.
+
+=cut
+
+sub postcommit {
+    my ( $self, $c, $o ) = @_;
+    my $pk = $self->primary_key;
+
+    if ( $c->action->name eq 'rm' ) {
+        $c->response->redirect( $c->uri_for('') );
+    }
+    else {
+        $c->response->redirect( $c->uri_for( '', $o->$pk ) );
+    }
+
+    1;
 }
 
 1;
